--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -185,12 +185,26 @@ body {
   @include text-truncate;
 }
 
+.text-left,
+.left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
 
-.text-right {
+.text-right,
+.right {
   text-align: right;
+}
+
+.pull-right {
+  float: right;
+}
+
+.pull-left {
+  float: left;
 }
 
 .hidden {
